2005-09-30  Jakub Jelinek  <jakub@redhat.com>

	* posix/regexec.c (update_cur_sifted_state, check_arrival,
	check_arrival_add_next_nodes): Avoid using uninitialized variable.

	* malloc/memusage.c (dest): Fix a bunch of warnings on 32-bit arches.

	* sysdeps/i386/fpu/libm-test-ulps: Update for GCC 4.0.x.

2005-09-29  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/Makefile (modules): Add IBM803, IBM901, IBM902, IBM921,
	IBM1008, IBM1008_420, IBM1097, IBM1112, IBM1123, IBM1130, IBM1140,
	IBM1141, IBM1142, IBM1143, IBM1144, IBM1145, IBM1146, IBM1147, IBM1148,
	IBM1149, IBM1166, IBM1167, IBM4517, IBM4899, IBM4909, IBM4971,
	IBM5347, IBM9030, IBM9066, IBM9448, IBM12712, IBM16804.
	(distribute): Add ibm803.c, ibm803.h, ibm901.c, ibm901.h, ibm902.c,
	ibm902.h, ibm921.c, ibm921.h, ibm1008.c, ibm1008.h, ibm1008_420.c,
	ibm1097.c, ibm1097.h, ibm1112.c, ibm1112.h, ibm1123.c, ibm1123.h,
	ibm1130.c, ibm1130.h, ibm1140.c, ibm1140.h, ibm1141.c, ibm1141.h,
	ibm1142.c, ibm1142.h, ibm1143.c, ibm1143.h, ibm1144.c, ibm1144.h,
	ibm1145.c, ibm1145.h, ibm1146.c, ibm1146.h, ibm1147.c, ibm1147.h,
	ibm1148.c, ibm1148.h, ibm1149.c, ibm1149.h, ibm1166.c, ibm1166.h,
	ibm1167.c, ibm1167.h, ibm4517.c, ibm4517.h, ibm4899.c, ibm4899.h,
	ibm4909.c, ibm4909.h, ibm4971.c, ibm4971.h, ibm5347.c, ibm5347.h,
	ibm9030.c, ibm9030.h, ibm9066.c, ibm9066.h, ibm9448.c, ibm9448.h,
	ibm12712.c, ibm12712.h, ibm16804.c, ibm16804.h.
	* iconvdata/TESTS: Add entries for new modules.
	* iconvdata/gconv-modules: Likewise.
	* iconvdata/ibm803.c: New file.
	* iconvdata/ibm803.h: New file.
	* iconvdata/ibm901.c: New file.
	* iconvdata/ibm901.h: New file.
	* iconvdata/ibm902.c: New file.
	* iconvdata/ibm902.h: New file.
	* iconvdata/ibm921.c: New file.
	* iconvdata/ibm921.h: New file.
	* iconvdata/ibm1008.c: New file.
	* iconvdata/ibm1008.h: New file.
	* iconvdata/ibm1008_420.c: New file.
	* iconvdata/ibm1097.c: New file.
	* iconvdata/ibm1097.h: New file.
	* iconvdata/ibm1112.c: New file.