@@ -1,3 +1,8 @@
+2005-09-30  Ulrich Drepper  <drepper@redhat.com>
+
+	* posix/regex.h: Pretty printing.
+	Clean up namespace a bit.
+
 2005-09-30  Jakub Jelinek  <jakub@redhat.com>
 
 	* posix/regexec.c (update_cur_sifted_state, check_arrival,
